tests/macro-tests/cases/property/return_type_is_not_ui_node.stderr
warning: unused import: `UiNode`
 --> cases/property/return_type_is_not_ui_node.rs:1:55
  |
1 | use zng::prelude_wgt::{property, IntoUiNode, IntoVar, UiNode};
  |                                                       ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
 --> cases/property/return_type_is_not_ui_node.rs:5:1
  |
5 | #[property(CONTEXT)]
  | ^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `UiNode`, found `NotUiNode`
  | expected `zng::prelude::UiNode` because of return type
  |
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
